--- a/app/index.html
+++ b/app/index.html
@@ -53,6 +53,20 @@
 
         </div><!--/cover-end-->
 
+        <div class="container" id="page2">
+            <div class="ab-element" id="page2-bg"></div>
+            <div class="ab-element" id="page2-content">
+                <div class="ab-element page2-line" id="page2-line"></div>
+                <div class="ab-element page2-content1" id="page2-content1"></div>
+                <div class="ab-element page2-content2" id="page2-content2"></div>
+                <div class="ab-element page2-content3" id="page2-content3"></div>
+                <div class="ab-element page2-content4" id="page2-content4"></div>
+
+            </div><!--/page2-content end-->
+        </div><!--/page2 end-->
+
+        <div class="logo" id="common-logo"></div>
+
 
         <script src="js/vendor/motion.js"></script>
         <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
