--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,20 @@
             </div><!--/page2-content end-->
         </div><!--/page2 end-->
 
+        <div class="container" id="page3">
+            <div class="ab-element" id="page3-bg"></div>
+            <div class="ab-element" id="page3-content">
+                <div class="ab-element page3-line" id="page3-line"></div>
+                <div class="ab-element page3-content1" id="page3-content1"></div>
+                <div class="ab-element page3-content2" id="page3-content2"></div>
+                <div class="ab-element page3-content3" id="page3-content3"></div>
+                <div class="ab-element page3-content4" id="page3-content4"></div>
+                <div class="ab-element page3-content5" id="page3-content5"></div>
+
+            </div><!--/page3-content end-->
+
+        </div><!--/page3 end-->
+
         <div class="logo" id="common-logo"></div>
 
 
