--- a/app/index.html
+++ b/app/index.html
@@ -105,6 +105,22 @@
 
             </div><!--/page5 content end-->
 
+            <div id="page6">
+                <div class="ab-element" id="page6-content">
+                    <div class="ab-element page6-line" id="page6-line"></div>
+                    <div class="ab-element page6-content1" id="page6-content1"></div>
+                    <div class="ab-element page6-content2" id="page6-content2"></div>
+                    <div class="ab-element page6-content3" id="page6-content3"></div>
+                    <div class="ab-element page6-content4" id="page6-content4"></div>
+                    <div class="ab-element page6-content5" id="page6-content5"></div>
+
+                </div><!--/page6 content end-->
+
+                <div class="ab-element page6-sign-btn" id="sign-btn"></div>
+                <div class="ab-element page6-rule-btn" id="rule-btn"></div>
+
+            </div><!--/page6 end-->
+
         </div><!--/page56 end-->
 
         <div class="logo" id="common-logo"></div>
