--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,11 @@
         </script><!--适配强制640width-->
     </head>
     <body>
+        <div class="container" id="loading">
+            <div id="loading-logo"></div>
+            <div id="loading-num">0%</div>
+
+        </div><!--/loading end-->
         <div class="container" id="cover">
             <div class="ab-element" id="cover-bg"></div>
             <div class="ab-element" id="cover-content">
@@ -124,6 +129,15 @@
         </div><!--/page56 end-->
 
         <div class="logo" id="common-logo"></div>
+        <div id="bird">
+            <div class="ab-element bird-1" id="bird1"></div>
+            <div class="ab-element bird-2" id="bird2"></div>
+            <div class="ab-element bird-3" id="bird3"></div>
+            <div class="ab-element bird-4" id="bird4"></div>
+            <div class="ab-element bird-5" id="bird5"></div>
+        </div>
+
+        <div class="misc-up" id="arrow-up"></div>
 
 
         <script src="js/vendor/motion.js"></script>
@@ -134,6 +148,7 @@
         <script src="js/vendor/TweenMax.min.js"></script>
         <!-- endbuild -->
         <script src="js/vendor/touch.min.js"></script>
+        <script src="js/vendor/BezierPlugin.min.js"></script>
 
         <!-- build:js js/main.min.js -->
 
