前六页简单动画
前六页简单动画

--- a/app/index.html
+++ b/app/index.html
@@ -62,10 +62,10 @@
             <div class="ab-element" id="page2-bg"></div>
             <div class="ab-element" id="page2-content">
                 <div class="ab-element page2-line" id="page2-line"></div>
-                <div class="ab-element page2-content1" id="page2-content1"></div>
-                <div class="ab-element page2-content2" id="page2-content2"></div>
-                <div class="ab-element page2-content3" id="page2-content3"></div>
-                <div class="ab-element page2-content4" id="page2-content4"></div>
+                <div class="ab-element page2-content1 page2-content" id="page2-content1"></div>
+                <div class="ab-element page2-content2 page2-content" id="page2-content2"></div>
+                <div class="ab-element page2-content3 page2-content" id="page2-content3"></div>
+                <div class="ab-element page2-content4 page2-content" id="page2-content4"></div>
 
             </div><!--/page2-content end-->
         </div><!--/page2 end-->
@@ -74,11 +74,11 @@
             <div class="ab-element" id="page3-bg"></div>
             <div class="ab-element" id="page3-content">
                 <div class="ab-element page3-line" id="page3-line"></div>
-                <div class="ab-element page3-content1" id="page3-content1"></div>
-                <div class="ab-element page3-content2" id="page3-content2"></div>
-                <div class="ab-element page3-content3" id="page3-content3"></div>
-                <div class="ab-element page3-content4" id="page3-content4"></div>
-                <div class="ab-element page3-content5" id="page3-content5"></div>
+                <div class="ab-element page3-content1 page3-content" id="page3-content1"></div>
+                <div class="ab-element page3-content2 page3-content" id="page3-content2"></div>
+                <div class="ab-element page3-content3 page3-content" id="page3-content3"></div>
+                <div class="ab-element page3-content4 page3-content" id="page3-content4"></div>
+                <div class="ab-element page3-content5 page3-content" id="page3-content5"></div>
 
             </div><!--/page3-content end-->
 
@@ -88,11 +88,11 @@
             <div class="ab-element" id="page4-bg"></div>
             <div class="ab-element" id="page4-content">
                 <div class="ab-element page4-line" id="page4-line"></div>
-                <div class="ab-element page4-content1" id="page4-content1"></div>
-                <div class="ab-element page4-content2" id="page4-content2"></div>
-                <div class="ab-element page4-content3" id="page4-content3"></div>
-                <div class="ab-element page4-content4" id="page4-content4"></div>
-                <div class="ab-element page4-content5" id="page4-content5"></div>
+                <div class="ab-element page4-content1 page4-content" id="page4-content1"></div>
+                <div class="ab-element page4-content2 page4-content" id="page4-content2"></div>
+                <div class="ab-element page4-content3 page4-content" id="page4-content3"></div>
+                <div class="ab-element page4-content4 page4-content" id="page4-content4"></div>
+                <div class="ab-element page4-content5 page4-content" id="page4-content5"></div>
 
             </div><!--/page4-content end-->
 
@@ -100,24 +100,27 @@
 
         <div class="container" id="page56">
             <div class="ab-element" id="page56-bg"></div>
-            <div class="ab-element" id="page5-content">
-                <div class="ab-element page5-line" id="page5-line"></div>
-                <div class="ab-element page5-content1" id="page5-content1"></div>
-                <div class="ab-element page5-content2" id="page5-content2"></div>
-                <div class="ab-element page5-content3" id="page5-content3"></div>
-                <div class="ab-element page5-content4" id="page5-content4"></div>
-                <div class="ab-element page5-content5" id="page5-content5"></div>
+            <div class="container" id="page5">
+                <div class="ab-element" id="page5-content">
+                    <div class="ab-element page5-line" id="page5-line"></div>
+                    <div class="ab-element page5-content1 page5-content" id="page5-content1"></div>
+                    <div class="ab-element page5-content2 page5-content" id="page5-content2"></div>
+                    <div class="ab-element page5-content3 page5-content" id="page5-content3"></div>
+                    <div class="ab-element page5-content4 page5-content" id="page5-content4"></div>
+                    <div class="ab-element page5-content5 page5-content" id="page5-content5"></div>
 
-            </div><!--/page5 content end-->
+                </div><!--/page5 content end-->
+            </div><!--/page5 end-->
 
-            <div id="page6">
+
+            <div class="container" id="page6">
                 <div class="ab-element" id="page6-content">
                     <div class="ab-element page6-line" id="page6-line"></div>
-                    <div class="ab-element page6-content1" id="page6-content1"></div>
-                    <div class="ab-element page6-content2" id="page6-content2"></div>
-                    <div class="ab-element page6-content3" id="page6-content3"></div>
-                    <div class="ab-element page6-content4" id="page6-content4"></div>
-                    <div class="ab-element page6-content5" id="page6-content5"></div>
+                    <div class="ab-element page6-content1 page6-content" id="page6-content1"></div>
+                    <div class="ab-element page6-content2 page6-content" id="page6-content2"></div>
+                    <div class="ab-element page6-content3 page6-content" id="page6-content3"></div>
+                    <div class="ab-element page6-content4 page6-content" id="page6-content4"></div>
+                    <div class="ab-element page6-content5 page6-content" id="page6-content5"></div>
 
                 </div><!--/page6 content end-->
 
