--- a/app/index.html
+++ b/app/index.html
@@ -142,6 +142,13 @@
 
         <div class="misc-up" id="arrow-up"></div>
 
+        <div class="container" id="rule">
+            <div class="ab-element" id="rule-container">
+                <div class="ab-element" id="close-rule"></div>
+            </div>
+
+        </div><!--/rule end-->
+
 
         <script src="js/vendor/motion.js"></script>
         <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
