口令页静态
口令页静态

--- a/app/index.html
+++ b/app/index.html
@@ -149,6 +149,15 @@
 
         </div><!--/rule end-->
 
+        <div class="container" id="password-page">
+            <div class="ab-element" id="password-container">
+                <input type="text" class="ab-element" id="password">
+                <div class="ab-element" id="confirm"></div>
+
+            </div><!--/password-container end-->
+
+        </div><!--/password-page end-->
+
 
         <script src="js/vendor/motion.js"></script>
         <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
