--- a/app/index.html
+++ b/app/index.html
@@ -101,6 +101,7 @@
         <div class="container" id="page56">
             <div class="ab-element" id="page56-bg"></div>
             <div class="container" id="page5">
+                <div class="ab-element page5-dot" id="page5-dot"></div>
                 <div class="ab-element" id="page5-content">
                     <div class="ab-element page5-line" id="page5-line"></div>
                     <div class="ab-element page5-content1 page5-content" id="page5-content1"></div>
