--- a/app/index.html
+++ b/app/index.html
@@ -142,6 +142,16 @@
         </div>
 
         <div class="misc-up" id="arrow-up"></div>
+        <div id="music-control">
+           <div id="music-control-main"></div>
+           <div class="music-control-icon"></div>
+           <div class="music-control-icon"></div>
+           <div class="music-control-icon"></div>
+           <div class="music-control-icon"></div>
+           <div class="music-control-icon"></div>
+       </div>
+
+       <audio src="" loop="loop" id="bg-music"></audio>
 
         <div class="container" id="rule">
             <div class="ab-element" id="rule-container">
