添加返回按钮
添加返回按钮

--- a/app/index.html
+++ b/app/index.html
@@ -163,6 +163,7 @@
         <div class="container" id="password-page">
             <div class="ab-element" id="password-container">
                 <input type="text" class="ab-element" id="password">
+                <div class="ab-element" id="back"></div>
                 <div class="ab-element" id="confirm"></div>
 
             </div><!--/password-container end-->
