修改标题活动规则文案
修改标题活动规则文案

--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" /> <!--隐藏状态栏/设置状态栏颜色：只有在开启WebApp全屏模式时才生效。content的值为default | black | black-translucent 。-->
         <meta name="format-detection" content="telephone=no" /> <!--忽略数字自动识别为电话号码-->
         <meta name="format-detection" content="email=no" /> <!--忽略识别邮箱-->
-        <title>最美燕窝女人</title>
+        <title>寻找美丽燕窝女人</title>
         <!-- build:css css/main.min.css -->
         <link rel="stylesheet" href="css/main.css">
         <!-- endbuild -->
