添加跳过当前页
添加跳过当前页

--- a/app/index.html
+++ b/app/index.html
@@ -66,6 +66,8 @@
                 <div class="ab-element page2-content2 page2-content" id="page2-content2"></div>
                 <div class="ab-element page2-content3 page2-content" id="page2-content3"></div>
                 <div class="ab-element page2-content4 page2-content" id="page2-content4"></div>
+                <div class="ab-element go-sign page2-content" id="page2-go-sign"></div>
+
 
             </div><!--/page2-content end-->
         </div><!--/page2 end-->
@@ -79,6 +81,7 @@
                 <div class="ab-element page3-content3 page3-content" id="page3-content3"></div>
                 <div class="ab-element page3-content4 page3-content" id="page3-content4"></div>
                 <div class="ab-element page3-content5 page3-content" id="page3-content5"></div>
+                <div class="ab-element go-sign page3-content" id="page3-go-sign"></div>
 
             </div><!--/page3-content end-->
 
@@ -93,6 +96,7 @@
                 <div class="ab-element page4-content3 page4-content" id="page4-content3"></div>
                 <div class="ab-element page4-content4 page4-content" id="page4-content4"></div>
                 <div class="ab-element page4-content5 page4-content" id="page4-content5"></div>
+                <div class="ab-element go-sign2 page4-content" id="page4-go-sign"></div>
 
             </div><!--/page4-content end-->
 
@@ -109,6 +113,7 @@
                     <div class="ab-element page5-content3 page5-content" id="page5-content3"></div>
                     <div class="ab-element page5-content4 page5-content" id="page5-content4"></div>
                     <div class="ab-element page5-content5 page5-content" id="page5-content5"></div>
+                    <div class="ab-element go-sign page5-content" id="page5-go-sign"></div>
 
                 </div><!--/page5 content end-->
             </div><!--/page5 end-->
