--- a/app/index.html
+++ b/app/index.html
@@ -168,7 +168,8 @@
         <div class="container" id="password-page">
             <div class="ab-element" id="password-container">
                 <input type="text" class="ab-element" id="password">
-                <div class="ab-element" id="back"></div>
+                <div class="ab-element" id="close-password"></div>
+                <div class="ab-element" id="get-password"></div>
                 <div class="ab-element" id="confirm"></div>
 
             </div><!--/password-container end-->
