加强制关注动画，改动画
加强制关注动画，改动画

--- a/app/index.html
+++ b/app/index.html
@@ -176,6 +176,16 @@
 
         </div><!--/password-page end-->
 
+        <div class="container" id="qr-page">
+            <div class="ab-element" id="qr-container">
+                <img src="images/qrcode.png" class="ab-element" id="qrcode">
+                <img src="images/qrcode.png" class="ab-element" id="fake-qrcode">
+                <div class="ab-element" id="close-qr"></div>
+
+            </div><!--/qr-container-->
+
+        </div><!--qr-page end-->
+
 
         <script src="js/vendor/motion.js"></script>
         <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
