--- a/app/index.html
+++ b/app/index.html
@@ -96,7 +96,7 @@
                 <div class="ab-element page4-content3 page4-content" id="page4-content3"></div>
                 <div class="ab-element page4-content4 page4-content" id="page4-content4"></div>
                 <div class="ab-element page4-content5 page4-content" id="page4-content5"></div>
-                <div class="ab-element go-sign2 page4-content" id="page4-go-sign"></div>
+                <div class="ab-element go-sign page4-content" id="page4-go-sign"></div>
 
             </div><!--/page4-content end-->
 
