添加承接页
添加承接页

--- a/app/index.html
+++ b/app/index.html
@@ -186,6 +186,15 @@
 
         </div><!--qr-page end-->
 
+        <div class="scrolly-container" id="acti-page">
+            <div class="ab-element" id="acti-des">
+                <div class="ab-element" id="go-buy"></div>
+                <div class="ab-element" id="back-sign"></div>
+
+            </div>
+
+        </div><!--/acti-page end-->
+
 
         <script src="js/vendor/motion.js"></script>
         <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
